<resources>
    <string name="app_name">OCAT</string>
    <string name="start_an_assessment">Start an Assessment</string>
    <string name="hello">Hello!</string>
    <string name="akinseye">Akinseye</string>
    <string name="continue_an_assessment">Continue an Assessment</string>
    <string name="view_nreports">View\nReports</string>
    <string name="faqs">FAQs</string>
    <string name="select_a_category">Select a category to continue with the assessment</string>
    <string name="organisation_profile">Organisation Profile</string>
    <string name="organisation_name">Organisation Name</string>
    <string name="country">Country</string>
    <string name="thematic_area">Thematic Area</string>
    <string name="type_of_organisation">Type of Organisation</string>
    <string name="continu">Continue</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log in</string>
    <string name="enter_your_credentials">Enter your credentials to access your account</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="bridge_the_gap">Bridge the gap</string>
    <string name="build_your_organisation_resilience">Build your organisation resilience by using WACSI’s Organisation Capacity Assessment Tool (OCAT)</string>
    <string name="get_started">Get started</string>
    <string name="choose_language">Choose your language</string>
    <string name="french">French</string>
    <string name="english">English</string>
    <string name="logging_in">Logging you in, please wait!</string>
    <string name="signing_up">Signing you up, please wait!</string>
    <string name="registering_your_organisation">Registering your organisation</string>
    <string name="loading_categories">Loading categories...</string>
    <string name="getting_questions">Getting questions</string>
    <string name="view_my_reports">View Reports</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="login_successful">Login successful</string>
    <string name="continue_assessment">Continue Assessment</string>
    <string name="select_an_assessment">Select an assessment to continue</string>
    <string name="please_select_an_option">Please select an option</string>
    <string name="get_ready">Get ready!</string>
    <string name="options_loading_failed">Options loading failed</string>
    <string name="network_error">Network Error!</string>
    <string name="saving_your_responses">Saving your responses</string>
    <string name="failed_to_save">Failed to save</string>
    <string name="loading_report_please_wait">Loading report... Please wait</string>
    <string name="report_loading_failed">Report loading failed</string>
    <string name="module">"MODULE : "</string>
    <string name="report_and_analysis">" - Report and Analysis"</string>
    <string name="critical">Critical</string>
    <string name="prone_to_adverse">Prone to adverse risks and shocks and unable to sustain operations due to the absence of strong systems and structures</string>
    <string name="striving">Striving</string>
    <string name="presence_of_basic">Presence of basic operational structures to sustain community engagement without being able to ensure long-term sustainability of operations and interventions</string>
    <string name="thriving">Thriving</string>
    <string name="evidence_of_organising">Evidence of organising systems and structures, able to deliver services and satisfactorily engage with members and communities</string>
    <string name="viable">Viable</string>
    <string name="capacity_to_withstand">Capacity to withstand shocks and risk, capacity to innovate, nurture community-led initiatives, scale up and effectivley engage with members and communities</string>
    <string name="login_failed">Login failed</string>
    <string name="failed">Failed</string>
    <string name="assessment_saved">Assessment Saved</string>
    <string name="select_a_country">Select a country</string>
    <string name="select_a_thematic_area">Select a thematic area</string>
    <string name="select_an_organisation_type">Select an organisation type</string>
    <string name="enter_organisation_fullname">Enter organisation fullname</string>
    <string name="update_failed_please_try_again">Update failed. Please try again</string>
    <string name="full_name_is_too_short">Full name is too short</string>
    <string name="wrong_input">Wrong input</string>
    <string name="password_is_too_short">Password is too short</string>
    <string name="password_do_not_match">Password do not match</string>
    <string name="error">"Error! "</string>
    <string name="signup_failed">Signup failed</string>
    <string name="please_read_and_agree_to_the_policy">Please read and agree to the policy</string>
    <string name="categories_loading_failed">Categories loading failed</string>
    <string name="checking_reports_available">Checking reports available...</string>
    <string name="confirm_password">Confirm password</string>
    <string name="do_you_want_to_download_report">Do you want to download report?</string>
    <string name="submit">Submit</string>
    <string name="frequently_asked_questions">Frequently asked questions</string>
    <string name="your_comprehensive_guide">Your comprehensive guide to understanding and using the OCAT mobile</string>
    <string name="user_saved_response">User has already saved a response for this category</string>
    <string name="download_successful">Download successful</string>
    <string name="loading_please_wait">Loading. Please wait...</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="do_you_want_to_save_your_progress">Do you want to save your progress?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="do_you_want_to_quit">Do you want to quit?</string>
    <string name="file_not_found">File not Found!</string>
    <string name="kindly_download_the_file_first_before_sharing_click_the_download_report_button_first">Kindly download the file first before sharing. Click the \'Download Report\' button first</string>
    <string name="full_name">Full name</string>
    <string name="by_signing_up_you_agree_to_our">By signing up, you agree to our</string>
    <string name="and">and</string>
    <string name="summary_and_score">Summary and Score</string>
    <string name="score">Score:</string>
    <string name="score_range">Score Range:</string>
    <string name="interpretation">Interpretation:</string>
    <string name="download_report">Download Report</string>
    <string name="share_report">Share Report</string>
    <string name="you_have_no_report_check_back_after_completing_an_assessment_module">You have no report. Check back after completing an assessment module</string>
    <string name="next">Next</string>
    <string name="of"> of </string>
    <string name="start_new_nassessment">Start new\nAssessment</string>
    <string name="view_reports">View Reports</string>
    <string name="well_done_you_have_completed_nassessment_on_module">Well done, you have completed\nassessment on module</string>
    <string name="view_assessment_report">View Assessment Report</string>
    <string name="view_recommendations">View Recommendations</string>
    <string name="dashboard">Dashboard</string>
</resources>