<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="20dp"
    android:background="@color/white"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:layout_width="310dp"
            android:layout_height="310dp"
            android:src="@drawable/img"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bridge_the_gap"
            android:textColor="@color/black"
            android:fontFamily="@font/nunitosansextrabold"
            android:textSize="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="326dp"
            android:layout_height="wrap_content"
            android:text="@string/build_your_organisation_resilience"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:gravity="center"
            android:fontFamily="@font/nunitosanslight"
            android:textSize="14dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/get_started"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:fontFamily="@font/nunitosanssemibold"
            android:textSize="15dp"
            android:id="@+id/getstarted"
            android:layout_marginTop="50dp"
            android:background="@drawable/button_blue"/>

    </LinearLayout>

</RelativeLayout>