<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="20dp"
    tools:context=".OrgProfile">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back"
        android:layout_marginTop="20dp"
        android:id="@+id/back"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/back"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/organisation_profile"
            android:textColor="@color/black"
            android:fontFamily="@font/nunitosansbold"
            android:textSize="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/organisation_name"
                android:fontFamily="@font/nunitosanssemibold"
                android:textSize="15dp"
                android:textColor="@color/black"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:background="@drawable/edt_white"
                android:id="@+id/orgname"
                android:fontFamily="@font/nunitosanssemibold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country"
                android:fontFamily="@font/nunitosanssemibold"
                android:textSize="15dp"
                android:textColor="@color/black"/>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/spinnercountries"
                android:background="@drawable/edt_white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thematic_area"
                android:fontFamily="@font/nunitosanssemibold"
                android:textSize="15dp"
                android:textColor="@color/black"/>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/thematicarea"
                android:background="@drawable/edt_white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_of_organisation"
                android:fontFamily="@font/nunitosanssemibold"
                android:textSize="15dp"
                android:textColor="@color/black"/>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/orgtype"
                android:background="@drawable/edt_white"/>
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/continu"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:elevation="0dp"
            android:shadowColor="@color/white"
            android:fontFamily="@font/nunitosanssemibold"
            android:textSize="15dp"
            android:id="@+id/continu"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_blue"
            android:stateListAnimator="@null"/>



    </LinearLayout>

</RelativeLayout>