<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/white"
    tools:context=".ChooseLanguage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:layout_width="82dp"
            android:layout_height="120dp"
            android:src="@drawable/logo"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_language"
            android:textColor="@color/black"
            android:fontFamily="@font/nunitosansextrabold"
            android:textSize="20dp"
            android:layout_marginTop="10dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/english"
            android:textColor="@color/blue"
            android:textAllCaps="false"
            android:fontFamily="@font/nunitosanssemibold"
            android:textSize="15dp"
            android:id="@+id/btnenglish"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_white"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/french"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:fontFamily="@font/nunitosanssemibold"
            android:textSize="15dp"
            android:id="@+id/btnfrench"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_blue"/>

    </LinearLayout>


</RelativeLayout>