<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="20dp"
    tools:context=".ViewReports">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back"
        android:layout_marginTop="20dp"
        android:id="@+id/back"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_my_reports"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/back"
        android:id="@+id/txt"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/nunitosansbold"
        android:textSize="20dp"/>

    <GridView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:numColumns="2"
        android:visibility="gone"
        android:scrollbars="none"
        android:horizontalSpacing="8dp"
        android:verticalSpacing="8dp"
        android:layout_below="@+id/txt"
        android:id="@+id/gridview"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/loader"
        android:layout_centerInParent="true">
        <ProgressBar
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:id="@+id/progressBar"
            android:indeterminateTint="@color/light_green"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/nunitosansregular"
            android:gravity="center"
            android:text="@string/loading_please_wait"
            android:textColor="#000000"
            android:textSize="12dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/noreport"
        android:visibility="gone"
        android:layout_centerInParent="true">
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/noreport"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/nunitosansbold"
            android:gravity="center"
            android:text="@string/you_have_no_report_check_back_after_completing_an_assessment_module"
            android:textColor="@color/black"
            android:textSize="18dp" />
    </LinearLayout>


</RelativeLayout>