<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="20dp"
    tools:context=".Completion">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:layout_width="185dp"
                android:layout_height="185dp"
                android:src="@drawable/thumbsup"
                android:layout_centerInParent="true"
                android:layout_marginBottom="40dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunitosansregular"
                android:text="@string/well_done_you_have_completed_nassessment_on_module"
                android:layout_gravity="center"
                android:gravity="center"
                android:lineSpacingExtra="5dp"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunitosansbold"
                android:text="Governance"
                android:layout_gravity="center"
                android:gravity="center"
                android:lineSpacingExtra="5dp"
                android:textSize="24dp"
                android:textColor="@color/black"
                android:layout_marginBottom="20dp"
                android:id="@+id/categoryName"/>

            <RelativeLayout
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:id="@+id/btn_view_assessment"
                android:background="@drawable/button_blue">
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/document"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/view_assessment_report"
                    android:textColor="@color/white"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/nunitosanssemibold"
                    android:textSize="15dp"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:id="@+id/btn_view_recommendations"
                android:background="@drawable/button_green">
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/recommendations"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/view_recommendations"
                    android:textColor="@color/white"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/nunitosanssemibold"
                    android:textSize="15dp"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:id="@+id/btn_dashboard"
                android:background="@drawable/button_light_green">
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/home"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dashboard"
                    android:textColor="@color/white"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/nunitosanssemibold"
                    android:textSize="15dp"/>
            </RelativeLayout>



        </LinearLayout>
    </ScrollView>

</RelativeLayout>